--- a/index.html
+++ b/index.html
@@ -4,59 +4,11 @@
         <link rel="stylesheet" href="./index.css">
     </head>
     <body>
-        <h1>Sample Table</h1>
-        <table>
-            <tr>
-              <th colspan="7" class="blue">Invoice #12345ABC</th>
-              <th colspan="3" class="blue">18 Jul 2019</th>
-            </tr>
-            
-            <tr>
-              <td colspan="5" >
-                <b>Pay To:</b><br/>
-                The Tech Park<br/>
-                123 Willow Street<br/>
-                Boulevard, LA - 567892
-              </td>
-              <td colspan="5">
-                <b>Customer:</b><br/>
-                John Lark<br/>
-                Dummy Apartments<br/>
-                276 Main Street<br/>
-                Boulevard, LA - 567892
-              </td>
-            </tr>
-            <tr>
-              <td colspan="4" class="blue">Name/Description</td>
-              <td colspan="1" class="blue">Qty.</td>
-              <td colspan="2" class="blue">MRP</td>
-              <td colspan="3" class="blue">Amount</td>
-            </tr>
-            <tr>
-              <td colspan="4">Biryani</td>
-              <td colspan="1">3</td>
-              <td colspan="2">400</td>
-              <td colspan="3">1200</td>
-            </tr>
-            <tr>
-              <td colspan="4">Chocolate Shake</td>
-              <td colspan="1">3</td>
-              <td colspan="2">200</td>
-              <td colspan="3">600</td>
-            </tr>
-            <tr>
-              <td class="blue" colspan="7">Subtotal</td>
-              <td colspan="3">1800</td>
-            </tr>
-            <tr>
-              <td class="blue" colspan="5">Tax</td>
-              <td colspan="2">10%</td>
-              <td colspan="4">180</td>
-            </tr>
-            <tr>
-              <td class="blue" colspan="7">Grand Total:</td>
-              <td colspan="3">Rs 1620</td>
-            </tr>
-          </table>
+        <h1>Home Page</h1>
+        <div class="main">
+            <a href="./sampletable/" class="card">Table</a>
+            <a href="./videocards/" class="card">Video Cards</a>
+            <a href="./stunningpage/" class="card">Stunning page</a>
+        </div>
     </body>
 </html>
