--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             <a href="./sampletable/" class="card">Table</a>
             <a href="./videocards/" class="card">Video Cards</a>
             <a href="./stunningpage/" class="card">Stunning page</a>
+            <a href="./veganstore/" class="card">Vegan Store</a>
         </div>
     </body>
 </html>
