--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <a href="./videocards/" class="card">Video Cards</a>
             <a href="./stunningpage/" class="card">Stunning page</a>
             <a href="./veganstore/" class="card">Vegan Store</a>
+            <a href="./shoplane/" class="card">Shoplane</a>
         </div>
     </body>
 </html>
