shoplane site update

--- a/shoplane/index.html
+++ b/shoplane/index.html
@@ -31,7 +31,7 @@
         <div class="icons">
             <i class="fa fa-search"></i>
             <div class="cart" id="cartIcon">
-              <a href="./checkout.html">
+              <a href="#">
                 <i class="fa fa-shopping-cart">
                   <span id="cart-count">0</span>
                 </i>
