--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <a href="./stunningpage/" class="card">Stunning page</a>
             <a href="./veganstore/" class="card">Vegan Store</a>
             <a href="./shoplane/" class="card">Shoplane</a>
+            <a href="./nuuk/" class="card">Nuuk</a>
         </div>
     </body>
 </html>
