--- a/shoplane/index.html
+++ b/shoplane/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="./lib/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="../lib/bootstrap/bootstrap.min.css">
 
     <title>SHOPLANE - A place for shopping</title>
     <link rel="stylesheet" href="./index.css">
@@ -57,8 +57,8 @@
       </section>
 
     <!-- JQuery & Bootstrap js -->
-    <script src="./lib/jquery/jquery.slim.min.js"></script>
-    <script src="lib/bootstrap/bootstrap.min.js"></script>
+    <script src="../lib/jquery/jquery.slim.min.js"></script>
+    <script src="../lib/bootstrap/bootstrap.min.js"></script>
 
     <!-- My Scripts -->
     <script src="./data.js"></script>
