Video cards updated

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <a href="./veganstore/" class="card">Vegan Store</a>
             <a href="./shoplane/" class="card">Shoplane</a>
             <a href="./nuuk/" class="card">Nuuk</a>
+            <a href="./shoplane-full/" class="card">Shoplane - Full</a>
         </div>
     </body>
 </html>
