--- a/videocards/index.html
+++ b/videocards/index.html
@@ -11,8 +11,7 @@
       <div class="main-card">
         <div class="left">
           <div class="video-player">
-             <video width="420" height="240" controls>
-                <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+             <iframe frameborder="0" allowfullscreen="" id="video-player" src="https://player.vimeo.com/video/190062231"></iframe>
              </video>
              <div class="video-details">
                 <div class="video-views">
@@ -37,49 +36,16 @@
              </div>
           </div>
           </div>
-        <div class="right">
-           <div class="video-card  selected">
-              <img src="https://i.vimeocdn.com/video/600595198_390x220.webp" />
-              <h3>Croissants | Flour and Stone</h3>
-           </div>
-           <div class="video-card">
-              <img src="https://i.vimeocdn.com/video/604150056_390x220.webp" />
-              <h3>Perfect Mashed Potatoes and Gravy</h3>
-           </div>
-           <div class="video-card">
-              <img src="https://i.vimeocdn.com/video/726986673_390x220.webp" />
-              <h3>The Heart of Soba</h3>
-           </div>
-           <div class="video-card">
-              <img src="https://i.vimeocdn.com/video/570486309_390x220.webp" />
-              <h3>Grilled Cheese 9 Ways</h3>
-           </div>
-           <div class="video-card">
-              <img src="https://i.vimeocdn.com/video/602705517_390x220.webp" />
-              <h3>Pineapple Cheesecake</h3>
-           </div>
-           <div class="video-card">
-              <img src="https://i.vimeocdn.com/video/537261616_390x220.jpg" />
-              <h3>Lemony Chicken Noodle Soup</h3>
-           </div>
-           <div class="video-card">
-              <img src="https://i.vimeocdn.com/video/608805594_590x332.jpg" />
-              <h3>Pumpkin Roll</h3>
-           </div>
-           <div class="video-card">
-              <img src="https://i.vimeocdn.com/video/601730519_590x332.jpg" />
-              <h3>How to Brine a Turkey</h3>
-           </div>
-           <div class="video-card">
-              <img src="https://i.vimeocdn.com/video/456852083_590x332.jpg" />
-              <h3>Stop Motion Dry-Brined Turkey Recipe</h3>
-           </div>
-           <div class="video-card final-card">
-              <img src="https://i.vimeocdn.com/video/600328152_590x332.jpg" />
-              <h3>Butternut Squash Ravioli</h3>
-           </div>
+        <div class="right" id="video-cards">
+           
         </div>
        </div>
     </div>
     <footer>This is a sample footer</footer>
+
+    <!-- JQuery & Bootstrap js -->
+    <script src="../lib/jquery/jquery.slim.min.js"></script>
+
+    <!-- My Scripts -->
+    <script src="./index.js"></script>
  </body>
