video cards update

--- a/videocards/index.html
+++ b/videocards/index.html
@@ -14,7 +14,7 @@
              <iframe frameborder="0" allowfullscreen="" id="video-player" src="https://player.vimeo.com/video/190062231"></iframe>
              </video>
              <div class="video-details">
-                <div class="video-views">
+                <div class="video-views" id="views">
                    98.4k views 
                 </div>
                 <div class="video-icons">
@@ -29,9 +29,9 @@
           </div>
           <div class="video-description">
              <div class="title">
-                <h1>Croissants | Flour and Stone</h1>
+                <h1 id="title">Croissants | Flour and Stone</h1>
              </div>
-             <div class="content">
+             <div class="content" id="description">
                 There is no other way but to commit wholeheartedly to a relationship with a croissant. We have all found ourselves at the mercy of its allure. Here, in another epic film by the uber talented Nathan Rodger, our Erin divulges her personal romance with The Croissant.
              </div>
           </div>
