--- a/videocards/index.html
+++ b/videocards/index.html
@@ -1,51 +1,58 @@
-<head>
-    <title>Video Cards</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./video.css">
-    <head>
- <body>
-    <div class="heading">
-        <h1 class="page-title">The Video Player</h1>
-    </div>
-    <div class="wrapper">
-      <div class="main-card">
-        <div class="left">
-          <div class="video-player">
-             <iframe frameborder="0" allowfullscreen="" id="video-player" src="https://player.vimeo.com/video/190062231"></iframe>
-             </video>
-             <div class="video-details">
-                <div class="video-views" id="views">
-                   98.4k views 
-                </div>
-                <div class="video-icons">
-                   <i class="fa fa-heart-o" style="font-size:24px;"></i>
-                   <i class="fa fa-comment-o" style="font-size:24px;"></i>
-                   <i class="fa fa-bookmark-o" style="font-size:24px;"></i>
-                </div>
-             </div>
-          </div>
-          <div class="divider">
-            <hr/>
-          </div>
-          <div class="video-description">
-             <div class="title">
-                <h1 id="title">Croissants | Flour and Stone</h1>
-             </div>
-             <div class="content" id="description">
-                There is no other way but to commit wholeheartedly to a relationship with a croissant. We have all found ourselves at the mercy of its allure. Here, in another epic film by the uber talented Nathan Rodger, our Erin divulges her personal romance with The Croissant.
-             </div>
-          </div>
-          </div>
-        <div class="right" id="video-cards">
-           
-        </div>
-       </div>
-    </div>
-    <footer>This is a sample footer</footer>
+<html>
+   <head>
+      <title>Video Cards</title>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="./video.css">
 
-    <!-- JQuery & Bootstrap js -->
-    <script src="../lib/jquery/jquery.slim.min.js"></script>
+   <head>
 
-    <!-- My Scripts -->
-    <script src="./index.js"></script>
- </body>
+   <body>
+      <div class="heading">
+         <h1 class="page-title">The Video Player</h1>
+      </div>
+      <div class="wrapper">
+         <div class="main-card">
+            <div class="left">
+               <div class="video-player">
+                  <iframe frameborder="0" allowfullscreen="" style="width: 420px;height: 240px;" id="video-player"
+                     src="https://player.vimeo.com/video/190062231"></iframe>
+                  </video>
+                  <div class="video-details">
+                     <div class="video-views" id="views">
+                        98.4k views
+                     </div>
+                     <div class="video-icons">
+                        <i class="fa fa-heart-o" style="font-size:24px;"></i>
+                        <i class="fa fa-comment-o" style="font-size:24px;"></i>
+                        <i class="fa fa-bookmark-o" style="font-size:24px;"></i>
+                     </div>
+                  </div>
+               </div>
+               <div class="divider">
+                  <hr />
+               </div>
+               <div class="video-description">
+                  <div class="title">
+                     <h1 id="title">Croissants | Flour and Stone</h1>
+                  </div>
+                  <div class="content" id="description">
+                     There is no other way but to commit wholeheartedly to a relationship with a croissant. We have all
+                     found ourselves at the mercy of its allure. Here, in another epic film by the uber talented Nathan
+                     Rodger, our Erin divulges her personal romance with The Croissant.
+                  </div>
+               </div>
+            </div>
+            <div class="right" id="video-cards">
+
+            </div>
+         </div>
+      </div>
+      <footer>This is a sample footer</footer>
+
+      <!-- JQuery & Bootstrap js -->
+      <script src="../lib/jquery/jquery.slim.min.js"></script>
+
+      <!-- My Scripts -->
+      <script src="./index.js"></script>
+   </body>
+</html>
