--- a/shoplane-full/orderconfirm.html
+++ b/shoplane-full/orderconfirm.html
@@ -46,30 +46,11 @@
           </div>
     </nav>
     
-    <section id="product">
-        <div class="left-column">
-            <img id="product-img" atl="Product Image"/>
-        </div>
-        <div class="right-column">
-            <div class="product-description">
-                <h1 id="name"></h1>
-                <h4 id="brand"></h4>
-                <h3>Price: Rs <span id="price"></span></h3>
-                <div class="description">
-                  <h3>Description</h3>
-                  <p id="description"></p>
-                </div>
-                <div class="product-preview">
-                  <h3>Product Preview</h3>
-                  <div class="previewImg">
-                  </div>
-                </div>
-              </div>
-            <div class="btn">
-                <button id="add-to-cart">Add to Cart</button>
-            </div>
-        </div>
-    </section>
+    <div class="order-confirm">
+        <img src="https://shoplane.netlify.app/img/img_confirm.png" alt="">
+        <h3>Order Placed Successfully!!</h3>
+        <p>We have sent you an email with the order details</p>
+      </div>
 
     <footer>
       <ul class="online-store">
@@ -110,7 +91,7 @@
     <script src="./js/burger.js"></script>
     <script src="./js/data.js"></script>
     <script src="./js/cart.js"></script>
-    <script src="./js/product.js"></script>
+    <script src="./js/order.js"></script>
 
   </body>
 </html>
